# sms

./: README.md  openapi.yaml  pyproject.toml
src/sinch/: __init__.py  client.py  exceptions.py
src/sinch/internal/: http.py  messages.py
src/sinch/models/: channels.py  errors.py  message.py
tests/unit/: test_client.py  test_http.py  test_messages.py
