[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-messaging-sdk"
version = "0.1.0"
description = "A SDK intended for a simplified version of the Sinch Messaging API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.12"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "respx>=0.22",
    "ruff>=0.15",
    "mypy>=1.19",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sinch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
files = ["src"]